# Avito

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
avito_helper/app/: __init__.py  cli.py  models.py  scheduler.py
avito_helper/app/core/: avito_client.py
avito_helper/app/services/: bump_service.py  chat_service.py  description_service.py  stats_service.py
